--- a/views/home.ejs
+++ b/views/home.ejs
@@ -132,8 +132,7 @@
             <td class="table-font my-details"><%= rank %></td>
             <% rank++ %>
             <td class="table-font my-details">
-              <i class="fa fa-circle" aria-hidden="true"></i><%= leader.fullName
-              %>
+              <%= leader.fullName %>
             </td>
             <td class="table-font my-details"><%= leader.email %></td>
             <th class="table-font my-points"><%= leader.points %></th>
